# banded-mm

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.cfg
docs/: measurements.md  nnz-calculation.md  python-dev-tools.md
src/: dev.py  gbmm.py  main.py  matrix_mm.py  matrix_utils.py  matrix_visuals.py  naive_mm.py
src/banded_mm/: BdGEMM_blocking.py  BdGEMM_naiveCopy.py  BdGEMM_streamed.py  BdGEMM_streamedOuterLoop.py  BdMM_naiveCopy.py  VERSION.txt  __init__.py  gbmm.py  gbmm_cupy.py  gbmm_gpu.py  gbmm_streamed_inner.py  matrix_utils.py  naive_mm.py  sinv_rgf.py  xGBMM_benner_et_al_simplified.py  xGBMM_naive-copy.py  xGBMM_naive_copy.py  xGBMM_streamed.py
src/banded_mm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/drafts/: BdMM_naiveCopyBloated.py
tests/: test_BdGEMM_blocking.py  test_BdGEMM_naiveCopy.py  test_BdGEMM_streamed.py  test_dev.py  test_gbmm.py  test_naive_mm.py  test_xGBMM.py  test_xGBMM_naive-copy.py  test_xGBMM_naive_copy.py  test_xGBMM_streamed.py
tools/drafts/: matrix_storage_schemes.py
tools/drafts-TO-DELETE/: BdGEMM_streamedOuterLoop.py
tools/evaluation/: test_cases.py
tools/experiment-runner/: experiments.py
tools/utils/: matrix_utils.py
