[build-system]
requires = ["setuptools >= 40.6.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "."
write_to = "src/banded_mm/VERSION.txt"
version_scheme = "release-branch-semver"

[tool.black]
line-length = 90

[tool.pyright]
include = ["src"]
venv = ".venv"
