[tool.poetry]
name = "banded-mm"
version = "0.1.0"
description = "Library containing prototype implementations of BdMM and BdGEMM for GPU memory efficient banded matrix multiplications"
authors = ["Alex Studer <alexreduts@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.group.gpu]
optional = true

[tool.poetry.dependencies]
python = "^3.11"
numpy = "*"

[tool.poetry.group.gpu.dependencies]
cupy-cuda11x = "^12.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
