[metadata]
name = banded-mm 
version = file: src/banded_mm/VERSION.txt
description = Banded Matrix Multiplication Alogrithms Library
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = TBD, do not distribute
author = Alex Studer
url = https://github.com/alexreduts/banded-mm
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8,<4
include_package_data = True
zip_safe = False
packages = find:
package_dir =
    = src
# Installation requirements

[options.packages.find]
exclude =
    tests
    __pycache__
where = src

# Dev-only requirements: pip install -e ".[dev]"
[options.extras_require]
dev =
    pre-commit
    pytest>=7.1.3
    pytest-mock>=3.8.2

[bdist_wheel]
universal = 1
